--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@ __pycache__/
 *.so
 
 # Data files and model files (ignored to keep size reasonable)
-**/*.csv    # Raw data from MITBIH
-**/*.dat    # Files that contain interpolated wavelet decompositions
-**/*.cls    # Files that list the classification of each heartbeat
-**/*.model  # Trained neural network files. These are produced by neuralnettrainer.py and used by NN_run.py and collate_results.py.
+# Raw data from MITBIH
+**/*.csv
+# Files that contain interpolated wavelet decompositions
+**/*.dat
+# Files that list the classification of each heartbeat
+**/*.cls
+# Trained neural network files. These are produced by neuralnettrainer.py and used by NN_run.py and collate_results.py.
+**/*.model
 
 # Distribution / packaging
 .Python
